crates/wows-replays/tests/snapshots/20260213_143518_PASB110-Vermont_22_tierra_del_fuego/packet_snapshots__packet_043.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 968057
    entity_type: Vehicle
    position:
      x: -40
      y: 0
      z: -450
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
        - enabled: 1
          id: 3
        - enabled: 1
          id: 4
        - enabled: 1
          id: 5
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - []
          - - 3
            - 4
            - 24
            - 30
          - []
          - []
          - []
        paramsId: 4293043920
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 55300
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 55300
      maxServerSpeedRaw: 892620
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 968056
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 208
        - 182
        - 222
        - 242
        - 44
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 208
        - 46
        - 44
        - 199
        - 208
        - 174
        - 63
        - 199
        - 208
        - 46
        - 150
        - 198
        - 208
        - 174
        - 22
        - 199
        - 208
        - 174
        - 61
        - 199
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 207
        - 18
        - 254
        - 176
        - 207
        - 178
        - 254
        - 176
        - 207
        - 146
        - 251
        - 176
        - 207
        - 130
        - 254
        - 176
        - 207
        - 66
        - 254
        - 0
        - 0
        - 0
        - 0
        - 1
        - 0
        - 0
        - 0
        - 176
        - 239
        - 105
        - 242
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 66
        - 255
        - 176
        - 159
        - 50
        - 255
        - 176
        - 159
        - 82
        - 255
        - 176
        - 159
        - 242
        - 252
        - 0
        - 0
        - 0
        - 0
        - 1
        - 0
        - 0
        - 0
        - 176
        - 239
        - 237
        - 221
        - 4
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 27
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets:
            - 0
            - 0
            - 0
            - 0
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 1
      torpedoLocalPos: 4480
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4480
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 2
    state_length: 413
    vehicle_id: 3802
