crates/wows-replays/tests/snapshots/20260213_143518_PASB110-Vermont_22_tierra_del_fuego/packet_snapshots__packet_048.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 44
payload:
  PlayerOrientation:
    parent_id: 968071
    pid: 968070
    position:
      x: 0
      y: 0
      z: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
