crates/wows-replays/tests/snapshots/20260213_143518_PASB110-Vermont_22_tierra_del_fuego/packet_snapshots__packet_049.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 968081
    entity_type: Vehicle
    position:
      x: -600
      y: 0
      z: -400
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
        - enabled: 1
          id: 3
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - - 3
            - 12
            - 21
            - 23
          - []
          - - 12
            - 13
            - 20
            - 23
          - []
          - []
        paramsId: 3973228240
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 26900
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 26900
      maxServerSpeedRaw: 936989
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 968080
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 208
        - 54
        - 222
        - 242
        - 52
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 208
        - 46
        - 156
        - 199
        - 208
        - 174
        - 191
        - 197
        - 208
        - 46
        - 86
        - 199
        - 208
        - 174
        - 134
        - 199
        - 208
        - 174
        - 29
        - 197
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 207
        - 18
        - 254
        - 176
        - 207
        - 162
        - 251
        - 176
        - 207
        - 226
        - 253
        - 0
        - 0
        - 0
        - 0
        - 176
        - 207
        - 66
        - 254
        - 176
        - 207
        - 34
        - 255
        - 8
        - 0
        - 0
        - 0
        - 176
        - 111
        - 29
        - 254
        - 176
        - 111
        - 237
        - 254
        - 176
        - 111
        - 221
        - 254
        - 176
        - 111
        - 205
        - 254
        - 176
        - 111
        - 61
        - 254
        - 176
        - 111
        - 253
        - 254
        - 176
        - 239
        - 233
        - 246
        - 176
        - 111
        - 125
        - 255
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 18
        - 255
        - 176
        - 159
        - 2
        - 255
        - 176
        - 159
        - 210
        - 254
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 2
        - 0
        - 0
        - 0
        - 176
        - 239
        - 237
        - 221
        - 176
        - 239
        - 221
        - 212
        - 4
        - 0
        - 0
        - 0
        - 176
        - 239
        - 63
        - 255
        - 176
        - 239
        - 159
        - 254
        - 176
        - 239
        - 255
        - 253
        - 176
        - 239
        - 95
        - 253
        - 30
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 27
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets: []
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 1
      torpedoLocalPos: 4480
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4480
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 2
    state_length: 427
    vehicle_id: 3802
